# fivelabsengine

./: .clangd  CMakeLists.txt
dependencies/glad/: glad.h
src/: app.cpp  app.h  config.h  debug-log.cpp  debug-log.h  glad.c  main.cpp  shader.cpp  shader.h  window.cpp  window.h
src/shaders/: simple.fs  simple.vert  simple.vs
